<resources>
    <string name="app_name">AlohaAndroid</string>
    <string name="alert_no_internet_connetion">No internet connection</string>
    <string name="error_incorrect_pasword">Password incorrect</string>
    <string name="error_incorrect_email">email incorrect</string>
    <string name="notify_change_password_success">Đổi mật khẩu thành công!</string>
    <string name="notify_check_code_email">Please check code in your email</string>
    <string name="notify_input_code">Please input code</string>
    <string name="notify_delete_contact">Bạn có chắc chắn muốn xóa liên hệ này ?</string>
    <string name="message_sorry">Sorry, there was an error</string>
    <string name="copied_message">Message copied!</string>
    <string name="button_ok">OK</string>
    <string name="button_try_again">Try again</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_login">đăng nhập</string>
    <string name="button_register">đăng ký</string>
    <string name="button_confirm"> Xác nhận</string>
    <string name="button_continue"> Tiếp tục</string>
    <string name="button_history_call"> Lịch sử cuộc gọi</string>
    <string name="button_edit_infor">Sửa thông tin</string>
    <string name="button_change_password">Đổi mật khẩu</string>
    <string name="button_send_code">Gửi mã xác nhận</string>
    <string name="button_intro">Giới thiệu</string>
    <string name="button_logout">Đăng xuất</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonstar">*</string>
    <string name="button0">0</string>
    <string name="buttonsharp">#</string>
    <string name="error_message_lost_internet_connection">Unable to connect. Please check that you are connected to the
        Internet and try again.
    </string>
    <string name="title_app">Kết nối yêu thương</string>
    <string name="have_account">Đã có tài khoản ?</string>
    <string name="login"> <u>Đăng nhập</u> </string>
    <string name="havenot_account">Chưa có tài khoản ? </string>
    <string name="forgot_password"><u>Quên mật khẩu?</u></string>
    <string name="register"> <u>Đăng ký</u> </string>
    <string name="resend"> Gửi lại</string>
    <string name="time_second">0s</string>
    <string name="label_wellcome">Chào mừng bạn đến với</string>
    <string name="label_aloha">ALOHA</string>
    <string name="label_mute">Tắt mic</string>
    <string name="label_keyboad">Bàn phím</string>
    <string name="label_loud">Loa ngoài</string>
    <string name="label_total_money">Tổng số tiền :</string>
    <string name="label_mobile">Di động:</string>
    <string name="label_calling">Đang gọi...</string>
    <string name="label_call_in_coming">Cuộc gọi đến...</string>
    <string name="label_decline">Từ chối</string>
    <string name="label_acept">Đồng ý</string>
    <string name="label_old_pasword">Mật khẩu cũ</string>
    <string name="label_new_pasword">Mật khẩu mới</string>
    <string name="label_input_new_pasword"> Nhập lại mật khẩu mới</string>
    <string name="label_no_body"> Chưa có liên hệ</string>
    <string name="label_no_mesage">Không có tin nhắn nào</string>
    <string name="label_phone">Số điện thoại</string>
    <string name="label_history">Lịch sử</string>
    <string name="title_chat">Nhắn tin</string>
    <string name="title_contact">Danh bạ</string>
    <string name="title_favorite">Ưa thích</string>
    <string name="title_user">Tài khoản</string>
    <string name="title_setting">Cài đặt</string>
    <string name="title_history_call">Lịch sử cuộc gọi</string>
    <string name="title_edit_contact">Chỉnh sửa danh bạ</string>
    <string name="title_delete_conversation">Xóa cuộc trò chuyện </string>
    <string name="title_choose_photo">Choose photo</string>
    <string name="title_get_photo_gallery">Get photo in galery</string>
    <string name="title_take_a_photo">Take photo</string>
    <string name="title_mobile">Điện thoại</string>
    <string name="title_save">Lưu</string>
    <string name="hint_name">Họ tên</string>
    <string name="hint_number">Số điện thoại</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_repassword">Nhập lại Mật khẩu</string>
    <string name="hint_username">username</string>
    <string name="hint_pass">password</string>
    <string name="hint_input_code">Nhập mã xác nhận</string>
    <string name="hint_new_pasword">Nhập mật khẩu mới</string>
    <string name="hint_old_pasword">Nhập mật khẩu cũ</string>
    <string name="hint_contact_name">Tên liên hệ</string>
    <string name="hint_enter_a_message">Type a message…</string>
    <string name="add_contact">Thêm liên hệ</string>
    <string name="content_favorite">Ưa thích</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="record_in_progress">Recording</string>
    <string name="toast_recording_start">Recording started</string>
    <string name="rationale_call_phone">Please accept permission Call Phone to do this action!</string>
    <string name="rationale_read_and_write_to_storage">Please accept permissions Read and Write to Storage to select
        file
    </string>
    <string name="confirm_accept_permission_location">Please accept permission access location to do this action!
    </string>
    <string name="address_bar_hint">Enter a number or an address</string>
    <string name="wrong_password">Sai tài khoản hoặc mật khẩu</string>
    <string name="debug_popup_title">Debug</string>
    <string name="debug_popup_enable_logs">Enable logs</string>
    <string name="debug_popup_disable_logs">Disable logs</string>
    <string name="debug_popup_send_logs">Send logs</string>
    <string name="cancel">Cancel</string>
    <string name="pref_auto_download_disabled">Never</string>
    <string name="pref_auto_download_always">Always</string>
    <string name="pref_auto_download_under_size">If lighter than max size</string>
    <string name="sync_account_name">linphone contacts</string>
    <string name="error_network_unreachable">Network is unreachable</string>
    <string name="service_name">Service Ready</string>
    <string name="content_description_incoming_file">Incoming file</string>
    <string name="group_chat_notif" formatted="false">%1: %2</string>
    <string name="missed_calls_notif_body">%i missed calls</string>
    <string name="missed_calls_notif_title">Missed call</string>
    <string name="notification_reply_label">Reply</string>
    <string name="notification_replied_label">Sent reply: %s</string>
    <string name="notification_call_hangup_label">Hangup</string>
    <string name="notification_call_answer_label">Answer</string>
    <string name="notification_mark_as_read_label">Mark as read</string>
    <string name="error">Error</string>
    <string name="unread_messages">%i unread messages</string>
    <string name="notification_channel_id" translatable="false">linphone_notification_id</string>
    <string name="content_title_notification_service">Linphone service notification</string>
    <string name="content_title_notification">Linphone instant messages notifications</string>
    <string name="update_available">An update is available</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="link_account_popup">Do you want to link the account %s with your phone number?</string>
    <string name="delete_text">Are you sure you want to delete your selection?</string>
    <string name="delete_contacts_text">Are you sure you want to delete these contacts?\nThey will be deleted from your phone as well!</string>
    <string name="user_agent" translatable="false">LinphoneAndroid</string>
    <string name="temp_photo_name" translatable="false">linphone-android-photo-temp</string>
    <string name="temp_photo_name_with_date" translatable="false">linphone-android-photo-%s</string>
    <string name="about_text" translatable="false">GNU General Public License V2\n © 2010–2019 Belledonne Communications</string>
    <string name="about_bugreport_email" translatable="false">linphone-android@belledonne-communications.com</string>
    <string name="notification_service_channel_id" translatable="false">linphone_notification_service_id</string>
    <string name="default_domain" translatable="false">sip.linphone.org</string>
    <string name="default_stun" translatable="false">stun.linphone.org</string>
    <string name="default_conference_factory_uri" translatable="false">sip:conference-factory@sip.linphone.org</string>
    <string name="default_lime_x3dh_server_url" translatable="false">https://lime.linphone.org/lime-server/lime-server.php</string>
    <string name="rls_uri" translatable="false">sip:rls@sip.linphone.org</string>
    <string name="about_link" translatable="false">https://linphone.org</string>
    <string name="download_link" translatable="false">https://linphone.org/download</string>
    <string name="recover_password_link" translatable="false">https://linphone.org/freesip/recover</string>
    <string name="about_privacy_policy_link" translatable="false">https://www.linphone.org/terms-and-privacy</string>
    <string name="about_license_link" translatable="false">https://www.gnu.org/licenses/old-licenses/gpl-2.0.html</string>
    <string name="push_type" translatable="false">firebase</string>
    <string name="gcm_defaultSenderId" translatable="false">929724111839</string>
    <string name="today_date_format" translatable="false">HH:mm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skipable_error_service_not_ready">Warning: service is not ready</string>
    <string name="file_transfer_error">File transfer error</string>
    <string name="warning_wrong_destination_address">Cannot build destination address from %s</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_call_declined">Call declined</string>
    <string name="error_user_busy">User busy</string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_incompatible_media">Incompatible media parameters</string>
    <string name="error_low_bandwidth">Your caller has low bandwidth, video cannot be started</string>
    <string name="error_bad_credentials">Bad credentials</string>
    <string name="error_unauthorized">Unauthorized</string>
    <string name="error_io_error">Network error</string>
    <string name="download_image_failed">Download failed. Please check your network connection or try again later.</string>
    <string name="remote_provisioning_failure">Failed to download or apply remote provisioning profile…</string>
    <string name="remote_provisioning_again_title">Remote provisioning</string>
    <string name="remote_provisioning_again_message">Do you want to change the provisioning URI?</string>
    <string name="couldnt_accept_call">An error occurred while accepting the call</string>
    <string name="facebook_app_id">2470521516522998</string>
    <string name="tao_du_an_moi">Tạo dự án mới</string>
    <string name="ten_du_an">Tên dự án</string>
    <string name="nhap_ten_du_an">Nhập tên dự án</string>
    <string name="mo_ta">Mô tả</string>
    <string name="nhap_mo_ta">Nhập mô tả</string>
    <string name="tao_du_an">Tạo dự án</string>
    <string name="lua_chon_so_hotline">LỰA CHỌN SỐ HOTLINE</string>
    <string name="ban_co_the_su_dung_so_dien_thoai_cua_ban_khi_nang_cap_tai_khoan">Bạn có thể sử dụng số điện thoại của bạn khi nâng cấp tài khoản</string>
    <string name="bat_dau_su_dung">Bắt đầu sử dụng</string>
</resources>