<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_btn_login_fb"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_radius_top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivExit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:src="@drawable/ic_icon_close_create" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tao_du_an_moi"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/ten_du_an"
        android:textColor="@color/colorBlackText" />

    <EditText
        android:id="@+id/etNameProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_et"
        android:hint="@string/nhap_ten_du_an"
        android:padding="12dp"
        android:textColorHint="@color/colorBlackTextOpacity30"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/mo_ta"
        android:textColor="@color/colorBlackText" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_et"
        android:hint="@string/nhap_mo_ta"
        android:padding="12dp"
        android:textColorHint="@color/colorBlackTextOpacity30"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnCreateProject"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="30dp"
        android:background="@drawable/bg_btn_login"
        android:text="@string/tao_du_an"
        android:textColor="@color/white" />

</LinearLayout>