<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:gravity="center"
              android:id="@+id/llNoInternet">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vt_no_connection"/>

    <TextView
            style="@style/TextContentLargeNavy"
            android:text="@string/message_sorry"
            android:layout_marginTop="@dimen/spacing_large"/>

    <TextView
            style="@style/TextContentNormal"
            android:text="@string/alert_no_internet_connetion"
            android:layout_marginTop="@dimen/spacing_tiny"/>

    <Button
            android:id="@+id/btnTryAgain"
            style="@style/ButtonNavyHard"
            android:text="@string/button_ok"
            android:layout_marginTop="@dimen/spacing_large"/>

</LinearLayout>