<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.test.TestActivity">

    <include layout="@layout/toolbar_personal" />

    <TextView
        style="@style/TextTitleNormal"
        android:paddingStart="36dp"
        android:paddingTop="@dimen/spacing_giant"
        android:text="@string/label_old_pasword" />

    <EditText
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_huge"
        android:layout_marginEnd="@dimen/spacing_large"
        android:hint="@string/hint_old_pasword"
        android:singleLine="true" />


    <TextView
        style="@style/TextTitleNormal"
        android:paddingStart="36dp"
        android:text="@string/label_new_pasword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLabelRePassword"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_huge"
        android:layout_marginEnd="@dimen/spacing_large"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_pasword"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextTitleNormal"
        android:paddingStart="36dp"
        android:text="@string/label_input_new_pasword" />

    <EditText
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_huge"
        android:layout_marginEnd="@dimen/spacing_large"
        android:hint="@string/label_input_new_pasword"
        android:singleLine="true" />

</LinearLayout>