<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/spacing_normal"
    android:background="@drawable/bg_option_menu"
    android:layout_height="wrap_content">

    <TextView
        style="@style/TextTitleLarge"
        android:layout_width="match_parent"
        android:text="@string/title_choose_photo"
        android:padding="@dimen/spacing_tiny"
        android:gravity="center_horizontal"/>

    <View style="@style/ViewLineGray"/>

    <TextView
        android:id="@+id/tvGetPhotoGallery"
        style="@style/TextContentLargeNavy"
        android:layout_width="match_parent"
        android:text="@string/title_get_photo_gallery"
        android:background="?android:selectableItemBackground"
        android:padding="@dimen/spacing_small"
        android:gravity="center_horizontal"/>

    <View style="@style/ViewLineGray"/>

    <TextView
        android:id="@+id/tvTakePhotos"
        style="@style/TextContentLargeNavy"
        android:layout_width="match_parent"
        android:text="@string/title_take_a_photo"
        android:background="?android:selectableItemBackground"
        android:padding="@dimen/spacing_small"
        android:gravity="center_horizontal"/>

</LinearLayout>