<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.alohaandroid.utils.linphone.Digit
                android:id="@+id/btnDigit1"
                style="@style/ButtonDial"
                android:soundEffectsEnabled="true"
                android:text="@string/button1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/font_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.alohaandroid.utils.linphone.Digit
                android:id="@+id/btnDigit2"
                style="@style/ButtonDial"
                android:soundEffectsEnabled="true"
                android:text="@string/button2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="ABC"
                android:textSize="@dimen/font_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.alohaandroid.utils.linphone.Digit
                android:id="@+id/btnDigit3"
                style="@style/ButtonDial"
                android:soundEffectsEnabled="true"
                android:text="@string/button3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="DEF"
                android:textSize="@dimen/font_small" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.alohaandroid.utils.linphone.Digit
                android:id="@+id/btnDigit4"
                style="@style/ButtonDial"
                android:soundEffectsEnabled="true"
                android:text="@string/button4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="GHI"
                android:textSize="@dimen/font_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.alohaandroid.utils.linphone.Digit
                android:id="@+id/btnDigit5"
                style="@style/ButtonDial"
                android:soundEffectsEnabled="true"
                android:text="@string/button5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="JKL"
                android:textSize="@dimen/font_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.alohaandroid.utils.linphone.Digit
                android:id="@+id/btnDigit6"
                style="@style/ButtonDial"
                android:soundEffectsEnabled="true"
                android:text="@string/button6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="MNO"
                android:textSize="@dimen/font_small" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.alohaandroid.utils.linphone.Digit
                android:id="@+id/btnDigit7"
                style="@style/ButtonDial"
                android:soundEffectsEnabled="true"
                android:text="@string/button7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="PQRS"
                android:textSize="@dimen/font_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.alohaandroid.utils.linphone.Digit
                android:id="@+id/btnDigit8"
                style="@style/ButtonDial"
                android:soundEffectsEnabled="true"
                android:text="@string/button8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TUV"
                android:textSize="@dimen/font_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.alohaandroid.utils.linphone.Digit
                android:id="@+id/btnDigit9"
                style="@style/ButtonDial"
                android:soundEffectsEnabled="true"

                android:text="@string/button9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="WXYZ"
                android:textSize="@dimen/font_small" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.alohaandroid.utils.linphone.Digit
                android:id="@+id/btnDigitStar"
                style="@style/ButtonDial"
                android:soundEffectsEnabled="true"
                android:text="@string/buttonstar" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.alohaandroid.utils.linphone.Digit
                android:id="@+id/btnDigit0"
                style="@style/ButtonDial"
                android:soundEffectsEnabled="true"
                android:text="@string/button0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.alohaandroid.utils.linphone.Digit
                android:id="@+id/btnDigitSharp"
                style="@style/ButtonDial"
                android:soundEffectsEnabled="true"
                android:text="@string/buttonsharp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>