<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".ui.ac_project.ChooseHotlineNumberFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/lua_chon_so_hotline"
        android:textColor="@color/colorMain"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/ban_co_the_su_dung_so_dien_thoai_cua_ban_khi_nang_cap_tai_khoan"
        android:textColor="@color/colorMainOpacity50" />

    <!--    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
    <!--        android:id="@+id/swipeRefresh"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->

    <!--        android:layout_weight="1">-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="30dp"
        android:layout_weight="1" />
    <!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_btn_login"
        android:text="@string/bat_dau_su_dung"
        android:textColor="@color/white" />
</LinearLayout>